--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <header>
             <h1>CodeAnalyzer Studio</h1>
             <p class="subtitle">Paste your code and instantly identify the programming language</p>
-            <button class="theme-toggle" id="themeToggle" type="button">Light Mode</button>
         </header>
 
         <div class="main-content">
@@ -125,7 +124,9 @@
                 <div class="panel-header">
                     <div class="panel-title-row">
                         <h2 class="panel-title">Results</h2>
-                        <button class="btn-copy" id="copyResultBtn" type="button" disabled>Copy Result</button>
+                        <div class="panel-actions">
+                            <button class="btn-copy" id="copyResultBtn" type="button" disabled>Copy Result</button>
+                        </div>
                     </div>
                 </div>
                 <div class="result-display">
@@ -134,6 +135,8 @@
                         <p>No code detected yet</p>
                     </div>
                     <div id="resultContent" class="result-content" style="display: none;"></div>
+                    <div id="filenameHint" class="filename-hint" style="display: none;"></div>
+                    <div id="perfWarning" class="perf-warning" style="display: none;"></div>
                 </div>
             </div>
         </div>
